set title fixed width, enabling center with margins instead of aligning inside of margins with padding

--- a/main.css
+++ b/main.css
@@ -41,6 +41,10 @@ ol {
 	margin: 25px auto 25px auto;
 }
 
+.header .title {
+	width: 150px;
+}
+
 .header .title a:hover {
 	color: #FF2200;
 }
